# pdb-spacecraft-simulator

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ete-tests.yml
cli/: __init__.py  simrun.py
docs/: ARCHITECTURE.md  UI_VERIFICATION_STRATEGY.md
examples/: aerie_export.json  anomaly_response_plan.json  constellation_contact_plan.json  eo_imaging_plan.json  operational_day_plan.json  orbit_lowering_plan.json  run_examples.py  spacecraft_config.yaml  station_keeping_plan.json  stations.json
scripts/: golden_demo.py  schema_snapshot.py
sim/: __init__.py  cache.py  engine.py
sim/activities/: __init__.py  base.py  collision_avoidance.py  downlink.py  eo_collect.py  momentum_desat.py  orbit_lower.py  safe_mode.py  station_keeping.py
sim/core/: __init__.py  config.py  time_utils.py  types.py
sim/io/: __init__.py  aerie_client.py  aerie_parser.py  aerie_queries.py
sim/models/: __init__.py  access.py  atmosphere.py  basilisk_propagator.py  imaging.py  orbit.py  power.py  propagator_base.py  propulsion.py  spacecraft_mode.py  storage.py
sim/runners/: __init__.py  activity_mappers.py  basilisk_runner.py
sim/viz/: __init__.py  czml_generator.py  diff.py  events_formatter.py  manifest_generator.py
sim_mcp/: __init__.py  config.yaml  http_server.py  server.py
sim_mcp/tools/: __init__.py  aerie.py  simulation.py  viz.py
spec/: STABILITY.md  architecture_layers.yml  ir_schema_snapshot.json  mappings.yml  overrides.yml
tests/: __init__.py  test_activity_mappers.py  test_aerie_client.py  test_aerie_parser.py  test_basilisk_propagator.py  test_cross_fidelity.py  test_imaging.py  test_integration.py  test_orbit.py  test_propulsion.py  test_spacecraft_mode.py  test_storage.py  test_viz.py
tests/e2e/: __init__.py  conftest.py  test_aerie_ui.py
tests/e2e/pages/: __init__.py  aerie.py
tests/ete/: __init__.py  conftest.py  test_aerie_integration.py  test_arch_browser.py  test_baseline_regression.py  test_e2e_pipeline.py  test_eclipse_contacts.py  test_fidelity.py  test_fidelity_hardening.py  test_full_pipeline.py  test_gmat_comparison.py  test_mcp_comprehensive.py  test_mcp_fidelity_features.py  test_mcp_integration.py  test_numerical_stability.py  test_performance_benchmarks.py  test_pipeline.py  test_regression_scenarios.py  test_smoke.py  test_viewer_degraded_mode.py  test_viewer_validation.py
tests/ete/fixtures/: __init__.py  data.py  services.py
tests/ete/pages/: __init__.py  arch_browser_page.py  viewer_page.py
tests/sim_mcp/: test_server.py  test_tools_aerie.py  test_tools_simulation.py  test_tools_viz.py
tests/tools/test_modelgen/: conftest.py  test_e2e.py  test_extractors.py  test_ir.py  test_overrides.py  (+1 more)
tools/modelgen/: __init__.py  cli.py  config.py  logging.py
tools/modelui/: index.html  package.json  tsconfig.json  vite.config.ts
validation/: __init__.py
validation/comparison/: __init__.py  comparator.py  metrics.py  reports.py
validation/config/: ete_tolerances.yaml  validation_config.yaml
validation/cross_fidelity/: __init__.py  comparator.py  metrics.py
validation/gmat/: __init__.py  baseline.py  baseline_manager.py  case_registry.py  executor.py  generate_baseline.py  generator.py  parser.py  regression.py  tolerance_config.py
validation/reference/: vallado_test_cases.py
validation/tests/: conftest.py  test_gmat_cases.py  test_gmat_execution.py  test_gmat_regression.py  test_scenario_runner.py  test_sgp4_vallado.py  test_validation.py
viewer/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
viewer/src/: App.tsx  loader.js  main.js  main.tsx  viewer.js
(+163 files in other folders)
